--- a/lession4.ipynb
+++ b/lession4.ipynb
@@ -65,6 +65,39 @@
     "'5.0'\n",
     "type(\"5.0\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "5\n",
+      "150\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(15+10)\n",
+    "print(15-10)\n",
+    "print(15*10)\n",
+    "print(5//10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5-10"
+   ]
   }
  ],
  "metadata": {
