--- a/lession2_20150111.ipynb
+++ b/lession2_20150111.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "-3\n"
+     ]
     }
    ],
    "source": [
-    "2*2"
+    "print(2*2**3-2**2)\n",
+    "print((2-3)*3)"
    ]
   }
  ],
