--- a/lession2_20150111.ipynb
+++ b/lession2_20150111.ipynb
@@ -2,6 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+5\n",
+    "2+8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 6 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=1+5\n",
+    "a=n+5\n",
+    "print(a,n,a+n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
