--- a/lession2_20150111.ipynb
+++ b/lession2_20150111.ipynb
@@ -2,43 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+5\n",
-    "2+8\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 6 17\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=1+5\n",
-    "a=n+5\n",
-    "print(a,n,a+n)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -57,6 +24,46 @@
    "source": [
     "print(2*2**3-2**2)\n",
     "print((2-3)*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 7 8.0 hello. \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4,7,8.0,'hello',sep=' ',end='. \\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3+5+8\n",
+      "4+5+9\n",
+      "\n",
+      "9+9=18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"3+5+8\")\n",
+    "print(\"4+5+9\")\n",
+    "print()\n",
+    "print(\"9+9=18\")"
    ]
   }
  ],
