--- a/lession2_20150111.ipynb
+++ b/lession2_20150111.ipynb
@@ -65,6 +65,74 @@
     "print()\n",
     "print(\"9+9=18\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radius = float(input(\"請輸入半徑\"))\n",
+    "diameter = 2 * radius\n",
+    "cir = 3.14 * radius ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "半徑: 3.0\n",
+      "直徑: 6.0\n",
+      "圓周長: 18.849555951\n",
+      "面積: 28.2743339265\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input(\"請輸入半徑:\"))\n",
+    "diameter = 2 * radius\n",
+    "circumference = 2 * 3.1415926585 * radius\n",
+    "area = 3.1415926585 * radius ** 2\n",
+    "\n",
+    "print(\"半徑:\",radius)\n",
+    "print(\"直徑:\",diameter)\n",
+    "print(\"圓周長:\",circumference)\n",
+    "print(\"面積:\",area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "斜邊 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "side1 = float(input(\"請輸入對邊\"))\n",
+    "side2 = float(input(\"請輸入對邊\"))\n",
+    "x =side1 ** 2+ side2 ** 2\n",
+    "y = math.sqrt(x)\n",
+    "print(\"斜邊\",y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
