--- a/lession4.ipynb
+++ b/lession4.ipynb
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "print(15+10)\n",
+    "print(15*10)\n",
     "print(15-10)\n",
     "print(15*10)\n",
     "print(5//10)\n",
