--- a/lession3_1.ipynb
+++ b/lession3_1.ipynb
@@ -2,21 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "my_list = [1, 2, 3, 4, 5]"
+    "numbers = [1, 2, 3, 4, 5] #使用符號建立\n",
+    "mixed_list = [1, \"Hello\",3.14, True] #元素值可以不同資料類型\n",
+    "empty_list = []\n",
+    "list_from_range = list(range(10,21))\n",
+    "list_from_range\n",
+    "\n",
+    "#list的操作\n",
+    "list_from_range[10] #subscript"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
