--- a/lession3_1.ipynb
+++ b/lession3_1.ipynb
@@ -142,10 +142,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "蘋\n",
+      "蕉\n",
+      "橘\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['蘋', '蕉', '橘']\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0->蘋\n",
+      "==========\n",
+      "1->蕉\n",
+      "==========\n",
+      "2->橘\n",
+      "==========\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index,fruit in enumerate(fruits):\n",
+    "    print(index, fruit,sep='->')\n",
+    "    print(\"==========\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Taipei': '台北',\n",
+       " 'New Taipei': '新北',\n",
+       " 'Taoyuan': '桃園',\n",
+       " 'Taichung': '台中',\n",
+       " 'Tainan': '台南',\n",
+       " 'Kaohsiung': '高雄',\n",
+       " 'Keelung': '基隆',\n",
+       " 'Hsinchu': '新竹',\n",
+       " 'Chiayi': '嘉義'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taiwan_cities = {\n",
+    "    'Taipei': '台北',\n",
+    "    'New Taipei': '新北',\n",
+    "    'Taoyuan': '桃園',\n",
+    "    'Taichung': '台中',\n",
+    "    'Tainan': '台南',\n",
+    "    'Kaohsiung': '高雄',\n",
+    "    'Keelung': '基隆',\n",
+    "    'Hsinchu': '新竹',\n",
+    "    'Chiayi': '嘉義'\n",
+    "}\n",
+    "taiwan_cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "台北\n",
+      "新北\n",
+      "桃園\n",
+      "台中\n",
+      "台南\n",
+      "高雄\n",
+      "基隆\n",
+      "新竹\n",
+      "嘉義\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in taiwan_cities.values():\n",
+    "    print(value)"
+   ]
   }
  ],
  "metadata": {
