--- a/lession3_1.ipynb
+++ b/lession3_1.ipynb
@@ -437,6 +437,44 @@
    "source": [
     "print(students_str, file=open('students.txt', mode='w', encoding='utf-8'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(students_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('student.csv',mode='w',encoding='utf-8',newline='')\n",
+    "writer =csv.DictWriter(file,[\"name\",\"chinese\",\"english\",\"math\",\"history\",\"health\"])\n",
+    "#print(type(writer))\n",
+    "writer.writeheader()\n",
+    "writer.writerows(students)\n",
+    "\n",
+    "file.close()\n",
+    "#file.closed"
+   ]
   }
  ],
  "metadata": {
