--- a/lession3_1.ipynb
+++ b/lession3_1.ipynb
@@ -475,6 +475,34 @@
     "file.close()\n",
     "#file.closed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open('student.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "    writer =csv.DictWriter(file,[\"name\",\"chinese\",\"english\",\"math\",\"history\",\"health\"])\n",
+    "    #print(type(writer))\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(students)\n",
+    "#file.close()\n",
+    "file.closed"
+   ]
   }
  ],
  "metadata": {
