--- a/lession5_3.ipynb
+++ b/lession5_3.ipynb
@@ -638,104 +638,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>國文</th>\n",
-       "      <th>英文</th>\n",
-       "      <th>數學</th>\n",
-       "      <th>地理</th>\n",
-       "      <th>探討</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>鍾俞禎</th>\n",
-       "      <td>98</td>\n",
-       "      <td>86</td>\n",
-       "      <td>51</td>\n",
-       "      <td>71</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>黃名明</th>\n",
-       "      <td>76</td>\n",
-       "      <td>66</td>\n",
-       "      <td>70</td>\n",
-       "      <td>63</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>林柏洋</th>\n",
-       "      <td>63</td>\n",
-       "      <td>60</td>\n",
-       "      <td>87</td>\n",
-       "      <td>84</td>\n",
-       "      <td>76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>林世城</th>\n",
-       "      <td>95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>96</td>\n",
-       "      <td>52</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>林詠斌</th>\n",
-       "      <td>72</td>\n",
-       "      <td>50</td>\n",
-       "      <td>87</td>\n",
-       "      <td>97</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     國文  英文  數學  地理  探討\n",
-       "鍾俞禎  98  86  51  71  51\n",
-       "黃名明  76  66  70  63  61\n",
-       "林柏洋  63  60  87  84  76\n",
-       "林世城  95  68  96  52  94\n",
-       "林詠斌  72  50  87  97  73"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "student_nums = 5\n",
     "data = np.random.randint(50,high=101,size=(student_nums, 5))\n",
     "students = pd.DataFrame(data,\n",
     "             columns=['國文','英文','數學','地理','探討'],\n",
-    "             index=get_names(student_nums))\n",
-    "students"
+    "             index=get_names(student_nums))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV儲存成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "students.to_csv('stduent.csv')\n",
+    "print(\"CSV儲存成功\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
