--- a/lession5_3.ipynb
+++ b/lession5_3.ipynb
@@ -669,10 +669,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xlsx存檔成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "students.to_excel('student.xlsx')\n",
+    "print(\"xlsx存檔成功\")"
+   ]
   }
  ],
  "metadata": {
