--- a/lession5_4.ipynb
+++ b/lession5_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "林怡偉  90   70  61  100  100"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,6 +502,216 @@
     "\n",
     "df =  pd.read_csv('student.csv',index_col=0)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['國文']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>陳信念</th>\n",
+       "      <td>91</td>\n",
+       "      <td>100</td>\n",
+       "      <td>71</td>\n",
+       "      <td>88</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>張婕妤</th>\n",
+       "      <td>87</td>\n",
+       "      <td>72</td>\n",
+       "      <td>58</td>\n",
+       "      <td>91</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>林建勳</th>\n",
+       "      <td>59</td>\n",
+       "      <td>64</td>\n",
+       "      <td>62</td>\n",
+       "      <td>72</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>賴昌韻</th>\n",
+       "      <td>89</td>\n",
+       "      <td>82</td>\n",
+       "      <td>99</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>劉耿琦</th>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>76</td>\n",
+       "      <td>87</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>陳建香</th>\n",
+       "      <td>96</td>\n",
+       "      <td>76</td>\n",
+       "      <td>68</td>\n",
+       "      <td>78</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>林怡偉</th>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>61</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文   英文  數學   地理   探討\n",
+       "陳信念  91  100  71   88   50\n",
+       "張婕妤  87   72  58   91   84\n",
+       "林建勳  59   64  62   72   76\n",
+       "賴昌韻  89   82  99   60   70\n",
+       "劉耿琦  78   75  76   87   72\n",
+       "陳建香  96   76  68   78   65\n",
+       "林怡偉  90   70  61  100  100"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['陳信念':'林怡偉']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>張韋成</th>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>82</td>\n",
+       "      <td>52</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>龔姵君</th>\n",
+       "      <td>95</td>\n",
+       "      <td>57</td>\n",
+       "      <td>84</td>\n",
+       "      <td>58</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>柯韋成</th>\n",
+       "      <td>76</td>\n",
+       "      <td>82</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>蒙淑惠</th>\n",
+       "      <td>95</td>\n",
+       "      <td>52</td>\n",
+       "      <td>61</td>\n",
+       "      <td>64</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  探討\n",
+       "張韋成  72  85  82  52  65\n",
+       "龔姵君  95  57  84  58  96\n",
+       "柯韋成  76  82  90  50  70\n",
+       "蒙淑惠  95  52  61  64  57"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:4]"
    ]
   }
  ],
