--- a/lession6_2.ipynb
+++ b/lession6_2.ipynb
@@ -23,6 +23,19 @@
     "response = requests.get(url)\n",
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from requests import Response\n",
+    "url = 'https://rate.bot.com.tw/xrt?Lang=zh-TW'\n",
+    "response = requests.get(url)\n",
+    "print(response.text)"
+   ]
   }
  ],
  "metadata": {
