--- a/lession7_2.ipynb
+++ b/lession7_2.ipynb
@@ -4,8 +4,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m執行具有 'Python 3.11.2' 的儲存格需要 ipykernel 套件。\n",
+      "\u001b[1;31m執行下列命令以將 'ipykernel' 安裝到 Python 環境中。\n",
+      "\u001b[1;31m命令: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('world.csv')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
