--- a/Untitled7_3.ipynb
+++ b/Untitled7_3.ipynb
@@ -283,12 +283,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.11.2"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
