--- a/lession9_5.ipynb
+++ b/lession9_5.ipynb
@@ -427,10 +427,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_db3d8_row0_col0 {\n",
+       "  background-color: #e9f2f7;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_db3d8_row1_col0 {\n",
+       "  background-color: #8c76b7;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row2_col0 {\n",
+       "  background-color: #bdd1e5;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_db3d8_row3_col0 {\n",
+       "  background-color: #8c6db2;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row4_col0 {\n",
+       "  background-color: #760c71;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row5_col0 {\n",
+       "  background-color: #852b8f;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row6_col0 {\n",
+       "  background-color: #8c70b3;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row7_col0 {\n",
+       "  background-color: #873a98;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row8_col0 {\n",
+       "  background-color: #770c73;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_db3d8_row9_col0 {\n",
+       "  background-color: #c0d4e6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_db3d8\">\n",
+       "  <caption>Weather Conditions</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_db3d8_level0_col0\" class=\"col_heading level0 col0\" >Tokyo</th>\n",
+       "      <th id=\"T_db3d8_level0_col1\" class=\"col_heading level0 col1\" >Taipei</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row0\" class=\"row_heading level0 row0\" >2021年01月01日</th>\n",
+       "      <td id=\"T_db3d8_row0_col0\" class=\"data row0 col0\" >乾燥</td>\n",
+       "      <td id=\"T_db3d8_row0_col1\" class=\"data row0 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row1\" class=\"row_heading level0 row1\" >2021年01月02日</th>\n",
+       "      <td id=\"T_db3d8_row1_col0\" class=\"data row1 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row1_col1\" class=\"data row1 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row2\" class=\"row_heading level0 row2\" >2021年01月03日</th>\n",
+       "      <td id=\"T_db3d8_row2_col0\" class=\"data row2 col0\" >有雨</td>\n",
+       "      <td id=\"T_db3d8_row2_col1\" class=\"data row2 col1\" >乾燥</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row3\" class=\"row_heading level0 row3\" >2021年01月04日</th>\n",
+       "      <td id=\"T_db3d8_row3_col0\" class=\"data row3 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row3_col1\" class=\"data row3 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row4\" class=\"row_heading level0 row4\" >2021年01月05日</th>\n",
+       "      <td id=\"T_db3d8_row4_col0\" class=\"data row4 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row4_col1\" class=\"data row4 col1\" >乾燥</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row5\" class=\"row_heading level0 row5\" >2021年01月06日</th>\n",
+       "      <td id=\"T_db3d8_row5_col0\" class=\"data row5 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row5_col1\" class=\"data row5 col1\" >有雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row6\" class=\"row_heading level0 row6\" >2021年01月07日</th>\n",
+       "      <td id=\"T_db3d8_row6_col0\" class=\"data row6 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row6_col1\" class=\"data row6 col1\" >有雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row7\" class=\"row_heading level0 row7\" >2021年01月08日</th>\n",
+       "      <td id=\"T_db3d8_row7_col0\" class=\"data row7 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row7_col1\" class=\"data row7 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row8\" class=\"row_heading level0 row8\" >2021年01月09日</th>\n",
+       "      <td id=\"T_db3d8_row8_col0\" class=\"data row8 col0\" >大雨</td>\n",
+       "      <td id=\"T_db3d8_row8_col1\" class=\"data row8 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_db3d8_level0_row9\" class=\"row_heading level0 row9\" >2021年01月10日</th>\n",
+       "      <td id=\"T_db3d8_row9_col0\" class=\"data row9 col0\" >有雨</td>\n",
+       "      <td id=\"T_db3d8_row9_col1\" class=\"data row9 col1\" >大雨</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f4c17210410>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rain_condition(v):\n",
+    "    if v < 1.75:\n",
+    "        return \"乾燥\"\n",
+    "    elif v < 2.75:\n",
+    "        return \"有雨\"\n",
+    "    else:\n",
+    "        return \"大雨\"\n",
+    "    \n",
+    "def change_index(t):\n",
+    "    return t.strftime('%Y年%m月%d日')\n",
+    "\n",
+    "weather_df.style\\\n",
+    ".set_caption(\"Weather Conditions\")\\\n",
+    ".background_gradient(axis=None, vmin=1, vmax=5, cmap='BuPu',subset=['Tokyo'])\\\n",
+    ".format(rain_condition)\\\n",
+    ".format_index(change_index)"
+   ]
   }
  ],
  "metadata": {
